@@ -59,7 +59,7 @@ public class DepartmentService {
      * @param id The ID of the department.
      * @return The department, if found.
      */
-    @PreAuthorize("hasAuthority('ADMIN')")
+    @PreAuthorize("hasAuthority('ADMIN') or hasAuthority('MANAGER')")
     public Optional<Department> loadDepartment(Long id) {
         return departmentRepository.findById(id);
     }
@@ -134,7 +134,7 @@ public class DepartmentService {
             throw new IllegalStateException("Multiple PUBLISHED shift plans found for the department.");
         }
 
-        return publishedShiftPlans.isEmpty() ? null : publishedShiftPlans.get(0);
+        return publishedShiftPlans.isEmpty() ? null : publishedShiftPlans.getFirst();
     }
 
 
